--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-center-j1"><i class="material-icons">crop_16_9</i></button>
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-right-j1"><i class="material-icons rotate-right">crop_16_9</i></button>
             </div>
-            <input class="nes-input" id="j1" type="text" value="J1">
+            <input class="nes-input" id="j1" type="text" value="J1" size="10">
+            <div class="fontsize-player">
+                <label>Taille police (px) : </label>
+                <input class="nes-input" id="fontsize-j1" type="text" maxlength="3" value="44" oninput="setTagFont('j1')">
+            </div>
             <menu class="dialog-menu">
                 <button class="nes-btn is-success center">OK</button>
             </menu>
@@ -50,6 +54,10 @@
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-right-j2"><i class="material-icons rotate-right">crop_16_9</i></button>
             </div>
             <input class="nes-input" id="j2" type="text" value="J2">
+            <div class="fontsize-player">
+                <label>Taille police (px) : </label>
+                <input class="nes-input" id="fontsize-j2" type="text" maxlength="3" value="44" oninput="setTagFont('j2')">
+            </div>
             <menu class="dialog-menu">
                 <button class="nes-btn is-success center">OK</button>
             </menu>
@@ -227,6 +235,10 @@
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-center-phase"><i class="material-icons">crop_16_9</i></button>
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-right-phase"><i class="material-icons rotate-right">crop_16_9</i></button>
             </div>
+            <div class="fontsize-player">
+                <label>Taille police (px) : </label>
+                <input class="" id="fontsize-phase" type="text" maxlength="3" value="44" oninput="setPhaseFont('phase')">
+            </div>
             <div id="type_phase">
                 <div id="form_type_phase">
                     <label class="radio"><input id="custom" type="radio" class="nes-radio" name="type_phase" value=""><span>Custom : </span><input id="custom_phase" type="text" name="custome_phase" size="10" /></label><br>
@@ -244,6 +256,10 @@
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-left-phase2"><i class="material-icons rotate-left">crop_16_9</i></button>
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-center-phase2"><i class="material-icons">crop_16_9</i></button>
                 <button class="nes-btn is-primary icons-only" type="button" id="rotate-right-phase2"><i class="material-icons rotate-right">crop_16_9</i></button>
+            </div>
+            <div class="fontsize-player">
+                <label>Taille police (px) : </label>
+                <input class="" id="fontsize-phase2" type="text" maxlength="3" value="44" oninput="setPhaseFont('phase2')">
             </div>
             <div id="select_phase" class="center">
                 <div id="form_select_phase">
@@ -290,8 +306,8 @@
             <div class="character background-j2-2" id="div-j2">
                 <img id="char-j2" class="" src="img/char/ult/mario_00_0.png">
             </div>
-            <div class="banner rotate-phase-left" id="phase"><span class="nes-text">Winners</span></div>
-            <div class="banner rotate-phase-left" id="phase2"><span class="nes-text">Round 1</span></div>
+            <div class="banner rotate-phase-left" id="phase"><span class="nes-text" id="phase-text">Winners</span></div>
+            <div class="banner rotate-phase-left" id="phase2"><span class="nes-text" id="phase2-text">Round 1</span></div>
             <div id="dom-wrap-haut">
                 <div class="logo" id="logo_haut">
                     <img src="">
