add custom fonts

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- Custom NES css -->
     <link rel="stylesheet" href="css/custom_nes.css">
 
+    <script type="text/javascript" src="json/custom-fonts.json"></script>
     <script type="text/javascript" src="json/characters.json"></script>
     <script type="text/javascript" src="img/stock/sprites.json"></script>
 </head>
