--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Smash Thumbnail Generator</title>
 
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/split.css">
     <link rel="stylesheet" href="css/sprites.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
 
@@ -146,7 +147,7 @@
     <dialog class="nes-dialog is-dark" id="dialog-char-j2">
         <p>Couleur fond : <button type="button" class="nes-btn is-warning icons-only" onclick="resetBG('j2')"><i class="nes-icon close is-small"></i> Reset</button></p>
         <div class="panel-color">
-            <form id="form_background_color_j1" name="form_background_color_j2">
+            <form id="form_background_color_j2" name="form_background_color_j2">
                 <div class="primary-color">
                     <label class="background-j2-1">
                         <input type="radio" class="nes-radio is-dark" name="background_color" value="1" />
