debut generation modal

--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script src="js/dom-to-image.min.js"></script>
+
+<script src="js/modal-utils.js"></script>
+
 <script src="js/render-char.js"></script>
 <script src="js/thumbnail.js"></script>
 <script src="js/parse-char.js"></script>
