--- a/index.html
+++ b/index.html
@@ -65,163 +65,6 @@
             </menu>
         </form>
     </dialog>
-    <!--    Edit perso J1-->
-    <dialog class="nes-dialog is-dark" id="dialog-char-j1">
-        <p>Couleur fond : <button type="button" class="nes-btn is-warning icons-only" onclick="resetBG('j1')"><i class="nes-icon close is-small"></i> Reset</button></p>
-        <div class="panel-color">
-            <form id="form_background_color_j1" name="form_background_color_j1">
-                <div class="primary-color">
-                    <label class="background-j1-1">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="1" checked />
-                        <span>1</span>
-                    </label>
-                    <label class="background-j1-2">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="2" />
-                        <span>2</span>
-                    </label>
-                    <label class="background-j1-3">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="3" />
-                        <span>3</span>
-                    </label>
-                    <label class="background-j1-4">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="4" />
-                        <span>4</span>
-                    </label>
-                    <label class="background-j1-5">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="5" />
-                        <span>5</span>
-                    </label>
-                    <label class="background-j1-6">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="6" />
-                        <span>6</span>
-                    </label>
-                    <label class="background-j1-7">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="7" />
-                        <span>7</span>
-                    </label>
-                    <label class="background-j1-8">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="8" />
-                        <span>8</span>
-                    </label>
-                </div>
-                <div>
-                    <label class="background-j1-0">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="0" />
-                        <span>Fond vert</span>
-                    </label>
-                    <label class="background-j1-999">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="999" />
-                        <span>Fond noir</span>
-                    </label>
-                </div>
-                <div class="select_logos" id="select_bg_j1">
-                    <label for="bg1_file" class="label-upload"><i class="material-icons">attachment</i> Ou choisir une image ...</label>
-                    <input id="bg1_file" type="file" onchange="setBackground('j1', 'bg1_file')" accept='image/*'>
-                </div>
-                <div>
-                    <label class="choix-bg">
-                        <input type="checkbox" class="nes-checkbox" onchange="toggleBackgroundSize('j1')" />
-                        <span>Etendre</span>
-                    </label>
-                    <label class="choix-bg">
-                        <input type="checkbox" class="nes-checkbox" onchange="toggleRepeatBackground('j1')" checked />
-                        <span>Répéter</span>
-                    </label>
-                </div>
-            </form>
-        </div>
-        <form method="dialog">
-            <p>Personnage Joueur 1 : </p>
-            <div class="center margin-auto">
-                <button class="nes-btn is-primary icons-only" type="button" id="reverse-j1"><i class="material-icons">compare_arrows</i> Retourner</button>
-            </div>
-            <div class="panel-color select-char" id="stocks-j1"></div>
-            <span class="center margin-auto nes-text">Costume</span>
-            <div class="panel-color select-color" id="color-char-j1"></div>
-            <menu class="dialog-menu">
-                <button class="nes-btn is-success center">OK</button>
-            </menu>
-        </form>
-    </dialog>
-    <!--    Edit perso J2-->
-    <dialog class="nes-dialog is-dark" id="dialog-char-j2">
-        <p>Couleur fond : <button type="button" class="nes-btn is-warning icons-only" onclick="resetBG('j2')"><i class="nes-icon close is-small"></i> Reset</button></p>
-        <div class="panel-color">
-            <form id="form_background_color_j2" name="form_background_color_j2">
-                <div class="primary-color">
-                    <label class="background-j2-1">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="1" />
-                        <span>1</span>
-                    </label>
-                    <label class="background-j2-2">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="2" checked />
-                        <span>2</span>
-                    </label>
-                    <label class="background-j2-3">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="3" />
-                        <span>3</span>
-                    </label>
-                    <label class="background-j2-4">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="4" />
-                        <span>4</span>
-                    </label>
-                    <label class="background-j2-5">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="5" />
-                        <span>5</span>
-                    </label>
-                    <label class="background-j2-6">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="6" />
-                        <span>6</span>
-                    </label>
-                    <label class="background-j2-7">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="7" />
-                        <span>7</span>
-                    </label>
-                    <label class="background-j2-8">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="8" />
-                        <span>8</span>
-                    </label>
-                </div>
-                <div>
-                    <label class="background-j2-0">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="0" />
-                        <span>Fond vert</span>
-                    </label>
-                    <label class="background-j2-999">
-                        <input type="radio" class="nes-radio is-dark" name="background_color" value="999" />
-                        <span>Fond noir</span>
-                    </label>
-                </div>
-                <div class="select_logos" id="select_bg_j2">
-                    <label for="bg2_file" class="label-upload"><i class="material-icons">attachment</i> Ou choisir une image ...</label>
-                    <input id="bg2_file" type="file" onchange="setBackground('j2', 'bg2_file')" accept='image/*'>
-                </div>
-                <div>
-                    <label class="choix-bg">
-                        <input type="checkbox" class="nes-checkbox" onchange="toggleBackgroundSize('j2')" />
-                        <span>Etendre</span>
-                    </label>
-                    <label class="choix-bg">
-                        <input type="checkbox" class="nes-checkbox" onchange="toggleRepeatBackground('j2')" checked />
-                        <span>Répéter</span>
-                    </label>
-                </div>
-            </form>
-        </div>
-        <form method="dialog">
-            <p>Personnage Joueur 2 : </p>
-            <div class="center margin-auto">
-                <button class="nes-btn is-primary icons-only" type="button" id="reverse-j2"><i class="material-icons">compare_arrows</i> Retourner</button>
-            </div>
-            <div class="panel-color select-char" id="stocks-j2"></div>
-            <span class="center margin-auto nes-text">Costume</span>
-            <div class="panel-color select-color" id="color-char-j2">
-            </div>
-            <menu class="dialog-menu">
-                <button class="nes-btn is-success center">OK</button>
-            </menu>
-        </form>
-    </dialog>
     <!--    Edit phases-->
     <dialog class="nes-dialog is-dark" id="dialog-phases">
         <form method="dialog">
@@ -302,11 +145,11 @@
             <section class="section-banner" id="section-j2">
                 <div class="banner rotate-tag-left" id="banner-j2"><span class="nes-text" id="name-j2">J2</span></div>
             </section>
-            <div class="character background-j1-1" id="div-j1">
-                <img id="char-j1" class="" src="img/char/ult/donkey_00_0.png">
+            <div class="character background-j1-1 solo" id="div-j1-char1">
+                <img id="char1-j1" class="" src="img/char/ult/rob_00_0.png">
             </div>
-            <div class="character background-j2-2" id="div-j2">
-                <img id="char-j2" class="" src="img/char/ult/mario_00_0.png">
+            <div class="character background-j2-2 solo" id="div-j2-char1">
+                <img id="char1-j2" class="" src="img/char/ult/mario_00_0.png">
             </div>
             <div class="banner rotate-phase-left" id="phase"><span class="nes-text" id="phase-text">Winners</span></div>
             <div class="banner rotate-phase-left" id="phase2"><span class="nes-text" id="phase2-text">Round 1</span></div>
