--- a/index.html
+++ b/index.html
@@ -124,17 +124,19 @@
     <!-- TODO nouveau miis -->
     <!-- TODO FR / EN -->
     <div class="center margin-auto"><span id="menu-top" class="center margin-auto nes-text">VoDs Thumbnails Generator for </span>
-        <div class="nes-select" style="width: 50%; margin: auto; padding-bottom: 10px">
-            <select required id="game_select" name="game">
-                <option value="melee">Super Smash Bros. Melee</option>
-                <option value="ult" selected>Super Smash Bros. Ultimate</option>
-                <option value="" disabled> ----- </option>
-                <option value="wiiu" disabled>Super Smash Bros. for Wii U</option>
-                <option value="PM" disabled>Project M</option>
-                <option value="brawl" disabled>Super Smash Bros. Brawl</option>
-                <option value="n64" disabled>Super Smash Bros. 64</option>
-            </select>
-        </div><a href="https://twitter.com/Kekwel_SSB" target="_blank" rel="noopener" aria-label="twitter"><i class="nes-icon is-medium twitter"></i></a>
+        <div style="display: flex">
+            <div class="nes-select" style="width: 50%; margin: auto; padding-bottom: 10px">
+                <select required id="game_select" name="game">
+                    <option value="melee">Super Smash Bros. Melee</option>
+                    <option value="ult" selected>Super Smash Bros. Ultimate</option>
+                    <option value="" disabled> ----- </option>
+                    <option value="wiiu" disabled>Super Smash Bros. for Wii U</option>
+                    <option value="PM" disabled>Project M</option>
+                    <option value="brawl" disabled>Super Smash Bros. Brawl</option>
+                    <option value="n64" disabled>Super Smash Bros. 64</option>
+                </select>
+            </div><a href="https://twitter.com/Kekwel_SSB" target="_blank" rel="noopener" aria-label="twitter"><i class="nes-icon twitter"></i></a>
+        </div>
     </div>
     <div id="main">
         <div id="thumbnail" style="margin: auto;">
